--- a/qgismaps.html
+++ b/qgismaps.html
@@ -39,7 +39,7 @@ body{
 			background: #000;
         }
         .nav {
-            max-width: 1200px;
+            max-width: 60%;
             margin: auto;
             padding: 15px 20px;
             display: flex;
@@ -190,7 +190,7 @@ body{
 }
 
 main{
-  max-width:1200px;
+  max-width:60%;
   margin:auto;
   padding:0 1.5rem 4rem;
 }
