--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -6,199 +6,35 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-<style>
-:root{
-  --bg:#f6f7f9;
-  --card:#ffffff;
-  --text:#1f2937;
-  --muted:#6b7280;
-  --accent:#2563eb;
-  --border:#e5e7eb;
-}
-
-*{box-sizing:border-box}
-
-body{
-  margin:0;
-  font-family:Inter,sans-serif;
-  background:var(--bg);
-  color:var(--text);
-  /*line-height:1.75;*/
-}
-/* NAV */
-        .site-header {
-            background: #111;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        .nav {
-            max-width: 1200px;
-            margin: auto;
-            padding: 15px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .nav-left {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .site-title {
-            font-weight: 600;
-            color: white;
-        }
-        .nav-links {
-            display: flex;
-            list-style: none;
-            gap: 20px;
-        }
-        .nav-links a {
-            color: #bbb;
-            text-decoration: none;
-            font-size: 0.95em;
-        }
-        .nav-links a:hover,
-        .nav-links a.active {
-            color: white;
-            border-bottom: 2px solid white;
-        }
-
-
-
-
-#intro{
-  text-align:center;
-  padding:4rem 1.5rem 3rem;
-}
-
-#intro h1{
-  font-size:2.6rem;
-  font-weight:700;
-  margin-bottom:0.5rem;
-}
-
-#intro p{
-  max-width:850px;
-  margin:auto;
-  color:var(--muted);
-}
-
-main{
-  max-width:950px;
-  margin:auto;
-  padding:0 1.5rem 4rem;
-  display:flex;
-  flex-direction:column;
-  gap:3.5rem;
-}
-
-section{
-  background:var(--card);
-  border:1px solid var(--border);
-  border-radius:16px;
-  padding:2.5rem;
-  box-shadow:0 15px 30px rgba(0,0,0,0.05);
-}
-
-section h2{
-  margin-top:0;
-  font-size:1.6rem;
-}
-
-section h2 a{
-  color:var(--text);
-  text-decoration:underline;
-  text-decoration-color:var(--accent);
-  text-underline-offset:5px;
-}
-
-section p{
-  color:var(--muted);
-  margin-bottom:1rem;
-}
-
-.gallery img{
-  width:70%;
-  margin-top:1.5rem;
-  border-radius:12px;
-  cursor:pointer;
-  transition:transform .2s ease, box-shadow .2s ease;
-  filter: blur(0px) contrast(1);
-  transition: filter 0.2s ease, transform 0.2s ease;
-}
-
-.gallery img:hover{
-  filter: blur(0);
-  transform: scale(1.01);
-  box-shadow:0 10px 30px rgba(0,0,0,.15);
-}
-
-.version{
-  margin-top:1.5rem;
-  font-weight:600;
-}
-
-code{
-  display:block;
-  background:#111827;
-  color:#e5e7eb;
-  padding:1rem;
-  border-radius:10px;
-  overflow-x:auto;
-  font-size:.85rem;
-  margin:1.2rem 0;
-}
-
-/* LIGHTBOX */
-#lightbox{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.85);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:1000;
-}
-
-#lightbox img{
-  max-width:90%;
-  max-height:90%;
-  border-radius:12px;
-}
-
-        /* FOOTER */
-        .site-footer {
-            text-align: center;
-            padding: 20px;
-            font-size: 0.8em;
-            color: #777;
-        }
-</style>
+<link href="style/style_general.css" rel="stylesheet">
+<link href="style/style_qgismaps.css" rel="stylesheet">
 </head>
 
 <body>
 	<header class="site-header">
 	    <nav class="nav">
 	        <div class="nav-left">
-	            <span class="site-title">Cartes Wonderdraft</span>
+	            <span data-i18n="nav_wonderdraft" class="site-title">Cartes Wonderdraft</span>
 	        </div>
 	        <ul class="nav-links">
-	            <li><a href="index.html">Accueil</a></li>
-	            <li><a href="qgismaps.html">Cartes QGIS</a></li>
-	            <li><a href="wonderdraftmaps.html" class="active">Cartes Wonderdraft</a></li>
-				<li><a href="30daymapchallenge.html">30 Day Map Challenge</a></li>
+	            <li><a data-i18n="nav_accueil" href="index.html">Accueil</a></li>
+	            <li><a data-i18n="nav_qgis" href="qgismaps.html">Cartes QGIS</a></li>
+	            <li><a data-i18n="nav_wonderdraft" href="wonderdraftmaps.html" class="active">Cartes Wonderdraft</a></li>
+				<li><a data-i18n="nav_30dmc" href="30daymapchallenge.html">30 Day Map Challenge</a></li>
 	        </ul>
-	    </nav>
+		</nav>
+		<div class="lang-switch">
+			<button id="lang-btn">FR</button>
+			<ul id="lang-list">
+				<li data-lang="fr">FR</li>
+				<li data-lang="en">EN</li>
+				<li data-lang="zh">ZH</li>
+			</ul>
+		</div>
 	</header>
 
-<main>
-
 <div id="intro">
-	<h1>Productions cartographiques — Wonderdraft</h1>
+	<h1>Productions cartographiques sur Wonderdraft</h1>
 	<p>
 	Toutes les cartes présentées ci-dessous ont été réalisées sous Wonderdraft, uniquement par curiosité
 	et par envie d’expérimenter.  
@@ -209,78 +45,107 @@ code{
 </div>
 
 
-<section>
-<h2><a href="#">Ma première carte sur Wonderdraft</a></h2>
-<p>
-Cette carte a été produite sur Wonderdraft. 
-</p>
-<p>
-Je voulais essayé de faire une île avec en découvrant le logiciel.
-</p>
-<div class="gallery">
-<img
-  src="maps/wonderdraft/THUMBS__premiere_carte.png"
-  data-full="maps/wonderdraft/premiere_carte.png"
-  alt="Ma première carte"
-  loading="lazy">
+
+
+
+<main class="gallery">
+<div class="col">
+	<section>
+		<h2>Ma première carte sur Wonderdraft</h2>
+		<p>Cette carte a été produite sur Wonderdraft.</p>
+		<p>Je voulais essayé de faire une île avec en découvrant le logiciel.</p>
+	<div class="gallery">
+	<img
+	  src="maps/wonderdraft/THUMBS__premiere_carte.png"
+	  data-full="maps/wonderdraft/premiere_carte.png"
+	  alt="Ma première carte"
+	  loading="lazy">
+	</div>
+	</section>
 </div>
-</section>
 
-<section>
-<h2><a href="#">La Haute-Marne dans un style ancien</a></h2>
-<p>
-Cette carte a été produite sur Wonderdraft.
-</p>
-<p>
-Je voulais faire une carte de mon département avec un style ancien (ça rend BEAUCOUP mieux en papier).
-</p>
-<div class="gallery">
-<img
-  src="maps/wonderdraft/THUMBS__Old_style_Haute-Marne.png"
-  data-full="maps/wonderdraft/Old_style_Haute-Marne.png"
-  alt="Haute-Marne avec un style ancien"
-  loading="lazy">
+
+
+<div class="col">
+	<section>
+		<h2>La Haute-Marne dans un style ancien</h2>
+		<p>Cette carte a été produite sur Wonderdraft.</p>
+		<p>Je voulais faire une carte de mon département avec un style ancien (ça rend BEAUCOUP mieux en papier).</p>
+	<div class="gallery">
+	<img
+	  src="maps/wonderdraft/THUMBS__Old_style_Haute-Marne.png"
+	  data-full="maps/wonderdraft/Old_style_Haute-Marne.png"
+	  alt="Haute-Marne avec un style ancien"
+	  loading="lazy">
+	</div>
+	</section>
 </div>
-</section>
 
 
-<!-- Le reste suit exactement le même principe -->
-<!-- Tu peux dupliquer les sections, le style est prêt -->
+
+
 
 </main>
 
-	<footer class="site-footer">
-	    Réalisé par moi-même – pour mon propre plaisir
-	</footer>
+<footer data-i18n="footer" class="site-footer"></footer>
 
-<div id="lightbox">
+<div id="lightbox"
+	 role="dialog"
+	 aria-modal="true"
+	 aria-hidden="true">
   <img src="" alt="">
 </div>
+
+
+
+<!-- AFFICHAGE DES CARTES EN GRAND AU CLIC -->
 <script>
 const lightbox = document.getElementById('lightbox');
 const lightboxImg = lightbox.querySelector('img');
 
-
-/*document.querySelectorAll('.gallery img').forEach(img=>{
-	img.addEventListener('click',()=>{
-		const lb=document.getElementById('lightbox');
-		lb.style.display='flex';
-		lb.querySelector('img').src=img.src;
-	});
-});*/
 document.querySelectorAll('.gallery img').forEach(img => {
   img.addEventListener('click', () => {
     lightbox.style.display = 'flex';
     lightboxImg.src = img.dataset.full;
+	/*if (!img.dataset.full) return;*/
+	lightbox.setAttribute('aria-hidden', 'false');
+
   });
 });
 
 // fermeture + nettoyage
 lightbox.addEventListener('click', () => {
   lightbox.style.display = 'none';
-  lightboxImg.src = ''; // <-- LE POINT CLÉ
+  lightboxImg.src = '';
+  lightbox.setAttribute('aria-hidden', 'true');
+
 });
 </script>
+
+
+<!-- OUVRIR / FERMER LE BOUTON DE LANGUE -->
+<script>
+const langSwitch = document.querySelector('.lang-switch');
+const langBtn = document.getElementById('lang-btn');
+
+langBtn.addEventListener('click', () => {
+  langSwitch.classList.toggle('open');
+});
+
+document.querySelectorAll('#lang-list li').forEach(item => {
+  item.addEventListener('click', () => {
+    const selectedLang = item.dataset.lang;
+
+    setLang(selectedLang);
+    langSwitch.classList.remove('open');
+  });
+});
+</script>
+
+
+<!-- CHANGEMENT DE LANGUE -->
+<script src="langues/qgismaps_cartographie.js"></script>
+
 
 </body>
 </html>
