--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -7,7 +7,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link href="style/style_general.css" rel="stylesheet">
-<link href="style/style_qgismaps.css" rel="stylesheet">
+<link href="style/style_mapssites.css" rel="stylesheet">
 </head>
 
 <body>
