--- a/30daymapchallenge.html
+++ b/30daymapchallenge.html
@@ -139,7 +139,7 @@
 	<header class="site-header">
 	    <nav class="nav">
 	        <div class="nav-left">
-	            <span data-i18n="nav_wonderdraft" class="site-title">Cartes Wonderdraft</span>
+	            <span data-i18n="nav_30dmc" class="site-title">30 Day Map Challenge</span>
 	        </div>
 	        <ul class="nav-links">
 	            <li><a data-i18n="nav_accueil" href="index.html">Accueil</a></li>
@@ -199,7 +199,7 @@ document.querySelectorAll('#lang-list li').forEach(item => {
 </script>
 
 <!-- CHANGEMENT DE LANGUE -->
-<script src="langues/30dmc_cartographie.js"></script>
+<script src="langues/qgismaps_cartographie.js"></script>
 
 
 <script>
