--- a/30daymapchallenge.html
+++ b/30daymapchallenge.html
@@ -144,8 +144,8 @@
 	        <ul class="nav-links">
 	            <li><a data-i18n="nav_accueil" href="index.html">Accueil</a></li>
 	            <li><a data-i18n="nav_qgis" href="qgismaps.html">Cartes QGIS</a></li>
-	            <li><a data-i18n="nav_wonderdraft" href="wonderdraftmaps.html" class="active">Cartes Wonderdraft</a></li>
-				<li><a data-i18n="nav_30dmc" href="30daymapchallenge.html">30 Day Map Challenge</a></li>
+	            <li><a data-i18n="nav_wonderdraft" href="wonderdraftmaps.html">Cartes Wonderdraft</a></li>
+				<li><a data-i18n="nav_30dmc" href="30daymapchallenge.html" class="active">30 Day Map Challenge</a></li>
 	        </ul>
 		</nav>
 		<div class="lang-switch">
