--- a/wonderdraftmaps.html
+++ b/wonderdraftmaps.html
@@ -34,14 +34,8 @@
 	</header>
 
 <div id="intro">
-	<h1>Productions cartographiques sur Wonderdraft</h1>
-	<p>
-	Toutes les cartes présentées ci-dessous ont été réalisées sous Wonderdraft, uniquement par curiosité
-	et par envie d’expérimenter.  
-	Aucune retouche n’a été effectuée sur un logiciel externe.  
-	<br><br>
-	Pour consulter les cartes en bonne qualité, il suffit de cliquer dessus.
-	</p>
+	<h1 data-i18n="intro_title"></h1>
+	<p data-i18n="intro_desc"></p>
 </div>
 
 
@@ -51,9 +45,9 @@
 <main class="gallery">
 <div class="col">
 	<section>
-		<h2>Ma première carte sur Wonderdraft</h2>
-		<p>Cette carte a été produite sur Wonderdraft.</p>
-		<p>Je voulais essayé de faire une île avec en découvrant le logiciel.</p>
+		<h2 data-i18n="sect1_title">Ma première carte sur Wonderdraft</h2>
+		<p data-i18n="sect1_prod"></p>
+		<p data-i18n="sect1_desc"></p>
 	<div class="gallery">
 	<img
 	  src="maps/wonderdraft/THUMBS__premiere_carte.png"
@@ -68,9 +62,9 @@
 
 <div class="col">
 	<section>
-		<h2>La Haute-Marne dans un style ancien</h2>
-		<p>Cette carte a été produite sur Wonderdraft.</p>
-		<p>Je voulais faire une carte de mon département avec un style ancien (ça rend BEAUCOUP mieux en papier).</p>
+		<h2 data-i18n="sect2_title">La Haute-Marne dans un style ancien</h2>
+		<p data-i18n="sect2_prod"></p>
+		<p data-i18n="sect2_desc"></p>
 	<div class="gallery">
 	<img
 	  src="maps/wonderdraft/THUMBS__Old_style_Haute-Marne.png"
@@ -144,7 +138,7 @@ document.querySelectorAll('#lang-list li').forEach(item => {
 
 
 <!-- CHANGEMENT DE LANGUE -->
-<script src="langues/qgismaps_cartographie.js"></script>
+<script src="langues/wonderdraft_cartographie.js"></script>
 
 
 </body>
